--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.32.0         # 必需
+  firebase_auth: ^4.20.0       # 用户认证
+  cloud_firestore: ^4.17.5     # Firestore 数据库
+  shared_preferences: ^2.2.3   # 本地简单存储
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
